--- a/amicusnotary-landing.html
+++ b/amicusnotary-landing.html
@@ -17,9 +17,23 @@
             top: 0;
             z-index: 1000;
             transition: transform 0.3s ease-out;
+            background-color: white !important;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         .ftco_navbar.hidden-navbar {
             transform: translateY(-100%);
+        }
+        .ftco_navbar .navbar-brand a {
+            color: #000 !important;
+        }
+        .ftco_navbar .nav-link {
+            color: #000 !important;
+        }
+        .ftco_navbar .nav-link:hover {
+            color: #0ea5a4 !important;
+        }
+        .ftco-section {
+            margin-top: 180px;
         }
     </style>
 </head>
@@ -60,10 +74,10 @@
                     <div class="ftco-services-2">
                         <div class="services mb-4">
                             <h3 class="heading mb-3">Professional Travel Document Notarization</h3>
-                            <p>Need your travel documents notarized? AmicusNotary provides quick, reliable notarization services specifically designed for travelers. Our state-approved notaries verify and authenticate your travel documents for international trips, visa applications, passport renewals, and more.</p>
+                            <p>Need your travel documents notarized? AmicusNotary provides quick, reliable notarization services specifically designed for travelers. A notary will verify and authenticate your travel documents for international trips, visa applications, passport renewals, and more.</p>
                         </div>
 
-                        <div class="services mb-4">
+                        <div class="services mb-4 text-center">
                             <h4 class="heading mb-2">What We Notarize:</h4>
                             <ul class="list-unstyled">
                                 <li class="mb-2">✓ Passport applications and renewals</li>
@@ -75,11 +89,11 @@
                             </ul>
                         </div>
 
-                        <div class="services mb-4">
+                        <div class="services mb-4 text-center">
                             <h4 class="heading mb-2">Why Choose AmicusNotary?</h4>
                             <ul class="list-unstyled">
                                 <li class="mb-2">✓ Fast turnaround times</li>
-                                <li class="mb-2">✓ State-certified notaries</li>
+                                <li class="mb-2">✓ NNA certified Notary</li>
                                 <li class="mb-2">✓ Online and in-person options available</li>
                                 <li class="mb-2">✓ Affordable rates</li>
                                 <li class="mb-2">✓ Specialized in travel documentation</li>
@@ -101,9 +115,6 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-4">
-                    <p><strong>AmicuServices</strong> - Your partner in sustainable living and essential services.</p>
-                </div>
-                <div class="col-md-4">
                     <h4 class="mb-4">Quick Links</h4>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
@@ -119,7 +130,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <p>&copy; 2025 AmicuServices. All rights reserved.</p>
+                    <p>&copy; 2026 AmicuServices. All rights reserved.</p>
                 </div>
             </div>
         </div>
