--- a/hotel-single.html
+++ b/hotel-single.html
@@ -352,7 +352,8 @@
   <script src="js/aos.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <!-- TODO: Add Google Maps API key with proper domain restrictions -->
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&sensor=false"></script> -->
   <script src="js/google-map.js"></script>
   
   <script src="js/main.js"></script>
