--- a/amicusc02-landing.html
+++ b/amicusc02-landing.html
@@ -17,14 +17,28 @@
             top: 0;
             z-index: 1000;
             transition: transform 0.3s ease-out;
+            background-color: #fff !important;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         .ftco_navbar.hidden-navbar {
             transform: translateY(-100%);
         }
+        .ftco_navbar .navbar-brand a {
+            color: #000 !important;
+        }
+        .ftco_navbar .nav-link {
+            color: #000 !important;
+        }
+        .ftco_navbar .nav-link:hover {
+            color: #0ea5a4 !important;
+        }
+        .ftco-section {
+            padding-top: 228px;
+        }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
+    <nav class="navbar navbar-expand-lg ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
         <div class="container">
             <div class="w-100 text-center">
                 <h1 class="navbar-brand d-inline-block mb-3" style="font-size: 2rem; font-weight: 600; padding-bottom: 12px; background-image: url('data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 10%22 preserveAspectRatio=%22none%22><path d=%22M 0 5 Q 25 0 50 5 T 100 5%22 stroke=%22black%22 stroke-width=%222%22 fill=%22none%22/></svg>'); background-position: bottom; background-repeat: repeat-x; background-size: 100px 8px;"><a href="index.html" style="color: inherit; text-decoration: none;">AmicuServices</a></h1>
@@ -65,7 +79,7 @@
 
                         <div class="text-center mb-4">
                             <a href="lca-calculator.html" class="btn btn-primary btn-lg">Use Our LCA Calculator</a>
-                            <p class="text-muted mt-3">Get a free preliminary assessment</p>
+                            <p class="text-muted mt-3">Print a Free Preliminary Report Today!</p>
                         </div>
 
                         <div class="services mb-4">
@@ -115,7 +129,6 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-4">
-                    <p><strong>AmicuServices</strong> - Your partner in sustainable living and essential services.</p>
                 </div>
                 <div class="col-md-4">
                     <h4 class="mb-4">Quick Links</h4>
@@ -127,13 +140,13 @@
                 </div>
                 <div class="col-md-4">
                     <h4 class="mb-4">Contact</h4>
-                    <p>Email: carbon@amicuservices.com</p>
+                    <p>Email: amicuservices@gmail.com</p>
                     <p>Phone: (555) 000-0002</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <p>&copy; 2025 AmicuServices. All rights reserved.</p>
+                    <p>&copy; 2026 AmicuServices. All rights reserved.</p>
                 </div>
             </div>
         </div>
