Add PayPal payment integration for Calculation Guide () and PDF Report (), restore calculation guide

--- a/amicusc02-landing.html
+++ b/amicusc02-landing.html
@@ -79,7 +79,7 @@
 
                         <div class="text-center mb-4">
                             <a href="lca-calculator.html" class="btn btn-primary btn-lg">Use Our LCA Calculator</a>
-                            <p class="text-muted mt-3">Print a Free Preliminary Report Today!</p>
+                            <p class="text-muted mt-3">Get a free carbon estimate Today!</p>
                         </div>
 
                         <div class="services mb-4">
