Update pricing to , redesign badge with gold theme and recycle icon, add test badge page, add AmicusFitness coming soon

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
 	              <div class="media-body">
 	                <h3 class="heading mb-3">AmicusFitness</h3>
 	                <p>Search for fitness classes and groups in your destination.</p>
+	                <p style="color: #0ea5a4; font-weight: 600; margin-top: 10px;">(Coming Soon!)</p>
 	              </div>
 	            </a>      
 	          </div>
