Fix getSampleHotels undefined error - add sample hotel data for offline search

--- a/amicusnotary-landing.html
+++ b/amicusnotary-landing.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-md-4">
                     <h4 class="mb-4">Contact</h4>
-                    <p>Email: info@amicuservices.com</p>
+                    <p>Email: amicuservices@gmail.com</p>
                     <p>Phone: (555) 000-0000</p>
                 </div>
             </div>
