--- a/amicusservices-landing.html
+++ b/amicusservices-landing.html
@@ -424,7 +424,7 @@
                             <ul class="list-unstyled">
                                 <li><span class="icon icon-map-marker"></span><span class="text">Contact us for more information</span></li>
                                 <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1 (555) 123-4567</span></a></li>
-                                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@amicuservices.com</span></a></li>
+                                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">amicuservices@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
