--- a/amicustravel-landing.html
+++ b/amicustravel-landing.html
@@ -20,6 +20,7 @@
             top: 0;
             z-index: 1000;
             transition: transform 0.3s ease-out;
+            background-color: white !important;
         }
         .ftco_navbar.hidden-navbar {
             transform: translateY(-100%);
@@ -51,14 +52,14 @@
 	    </div>
 	  </nav>
 
-    <section class="ftco-section">
+    <section class="ftco-section" style="padding-top: 144px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
 
                     <div class="ftco-services-2">
                         <div class="services mb-4 text-center">
-                            <h3 class="heading mb-3">Sustainable Travel Choices Made Simple</h3>
+                            <h2 class="mb-3" style="font-size: 2.5rem;">Sustainable Travel Choices Made Simple</h2>
                             <p>Whether you're planning a weekend getaway or a multi-country adventure, we help you travel smarter and greener. AmicusTravel makes sustainable travel simple. Discover eco-friendly accommodations, and make informed choices that align with your values.</p>
                             <div class="text-center mt-4 mb-5">
                                 <a href="sustainable-hotel-search.html" class="btn btn-primary btn-lg">Explore Destinations</a>
@@ -119,7 +120,7 @@
                 </div>
                 <div class="col-md-4">
                     <h4 class="mb-4">Contact</h4>
-                    <p>Email: travel@amicuservices.com</p>
+                    <p>Email: amicuservices@gmail.com</p>
                     <p>Phone: (555) 000-0001</p>
                 </div>
             </div>
