--- a/lca-calculator.html
+++ b/lca-calculator.html
@@ -257,8 +257,9 @@
       </aside>
     </div>
 
-    <footer class="muted" style="margin-top:18px">
-      Built with ❤️ — edit emissions factors in the script for your region. Use the badge fairly.
+    <footer class="muted" style="margin-top:18px;font-size:12px;line-height:1.6">
+      Built with ❤️ <br/>
+      <strong>Disclaimer:</strong> This calculator provides estimates for informational purposes only. Results should be verified by qualified professionals for formal reporting or certification.
     </footer>
 
     <!-- PayPal Modal for Calculation Guide -->
